--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <script src="p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
     <script src="matter.js"></script>
-    <script src="block.js"></script>
+    <script src="block1.js"></script>
+    <script src="block2.js"></script>
+    <script src="block3.js"></script>
     <script src="slingshot.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
