--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="block1.js"></script>
     <script src="block2.js"></script>
     <script src="block3.js"></script>
+    <script src="ball.js"></script>
     <script src="slingshot.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
