--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="block3.js"></script>
     <script src="ball.js"></script>
     <script src="slingshot.js"></script>
-
+    <script src="Ground.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
